[package]
name = "pytest-fixtures-lsp"
version = "0.1.0"
edition = "2024"
description = "LSP server for pytest fixture autocomplete"
license = "MIT"
repository = "https://github.com/kornicameister/pytest-fixtures-lsp"

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
